# CppStandards

./: .gitignore  CMakeLists.txt  Cpp11_AlignmentReq.cpp  Cpp11_AlignmentReq.hpp  Cpp11_AutoDecltype.cpp  Cpp11_AutoDecltype.hpp  Cpp11_DeclvalDecltype.cpp  Cpp11_DeclvalDecltype.hpp  Cpp11_DefaultedDeletestFunctions.cpp  Cpp11_DefaultedDeletestFunctions.hpp  Cpp11_GeneralizedUnions.cpp  Cpp11_GeneralizedUnions.hpp  Cpp11_InitializerList.cpp  Cpp11_InitializerList.hpp  Cpp11_Lambdas.cpp  Cpp11_Lambdas.hpp  Cpp11_LauguageFeatures  Cpp11_Quiz.cpp  Cpp11_Quiz.hpp  Cpp11_ScopeEnumeration.cpp  Cpp11_ScopeEnumeration.hpp  Cpp11_UniformInitialization.cpp  Cpp11_UniformInitialization.hpp  Cpp11_VariadicTemplates.cpp  Cpp11_VariadicTemplates.hpp  Cpp14_GenericLambdas.cpp  Cpp14_GenericLambdas.hpp  Cpp14_IntegerLiteral.cpp  Cpp14_IntegerLiteral.hpp  Cpp14_VariableTemplates.cpp  Cpp14_VariableTemplates.hpp  Cpp17_NesteadNamespaces.cpp  Cpp17_NesteadNamespaces.hpp  Cpp17_Optional.cpp  Cpp17_Optional.hpp  Cpp17_VariableDeclarationIfSwitch.cpp  Cpp17_VariableDeclarationIfSwitch.hpp  Cpp20_FeatureTestMacros.cpp  Cpp20_FeatureTestMacros.hpp  CppXX_ComprehensivQuiz.cpp  (+11 more)
VSProject/program/: program.sln
VSProject/program/program/: program.cpp  program.vcxproj
